<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.InGame">

    <data>
        <variable
            name="tipCalculator"
            type="com.example.multiapp.TipCalculatorFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tipCalc"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/checkBeforeTip"
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="108dp"
            android:ems="10"
            android:hint="Check Total"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="213dp"
            android:layout_height="139dp"
            android:layout_marginTop="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBeforeTip">

            <RadioButton
                android:id="@+id/tipFifteen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipFifteen" />

            <RadioButton
                android:id="@+id/tipEighteen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipEighteen" />

            <RadioButton
                android:id="@+id/tipTwenty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipTwenty" />
        </RadioGroup>

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="136dp"
            android:text="@string/calculateButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/totalWithTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/dollarSign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.649" />

        <TextView
            android:id="@+id/dollarSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="114dp"
            android:layout_marginBottom="82dp"
            android:text="@string/dollarSign"
            android:textColor="@color/basicText"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toStartOf="@+id/checkBeforeTip"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>